src/snapshots/rustdoc_json_mcp__tests__set_working_directory.snap
---
source: src/tests.rs
assertion_line: 36
expression: normalized_result
---
Set context to /TEST_CRATE_ROOT
